<resources>
    <string name="app_name">1170271-MohammadHajjeh-Assignment#1</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="number">Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="db">DB</string>
    <string name="married"> Married</string>
    <string name="study">Study</string>
    <string name="work">Work</string>
    <string name="gender">   Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agree_to_terms_amp_privacy"><![CDATA[Agree to terms & privacy]]></string>
    <string name="first_name">First Name</string>
    <string name="nav_header_desc" />
    <string name="back_to_registeter">Edit Information</string>
    <string name="todo">TODO</string>
</resources>