<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluebg"
    android:orientation="vertical"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="312dp"
        android:layout_height="95dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/registrationlogo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/firstNameInput"
            style="@style/EditStyle"
            android:layout_width="205dp"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lastNameInput"
            style="@style/EditStyle"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/emailAddressInput"
        style="@style/EditStyle"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneNumberInput"
        style="@style/EditStyle"
        android:drawableStart="@drawable/ic_phone"
        android:hint="@string/number"
        android:inputType="textPersonName|phone" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/EditStyle"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        style="@style/EditStyle"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:layout_marginStart="13dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/gender" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/male"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/female"
                android:text="@string/female" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" Gender"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/calendar" />

        <Spinner
            android:id="@+id/spinnerMonth"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
          />

        <Spinner
            android:id="@+id/spinnerDay"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            />

        <Spinner
            android:id="@+id/spinnerYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/db"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/studentSwitch"
            style="@style/switchStyle"
            android:layout_width="126dp"
            android:layout_marginLeft="10dp"
            android:drawableStart="@drawable/book"
            android:text="@string/study"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/workSwitch"
            style="@style/switchStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/work"
            android:text="@string/work"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Switch
            android:id="@+id/marriedSwitch"
            style="@style/switchStyle"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginStart="5dp"
            android:drawableStart="@drawable/ring"
            android:text=" Married"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/agreecheckBox"
        android:layout_width="202dp"
        android:layout_height="32dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:backgroundTint="@color/black"
        android:text="@string/agree_to_terms_amp_privacy"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="130dp"
        android:background="@color/black"
        android:onClick="register_onClick"
        android:text="@string/register"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold" />


</LinearLayout>